--- a/ui/calculatorUI.ui
+++ b/ui/calculatorUI.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>MainWindow</class>
+ <widget class="QWidget" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>338</width>
-    <height>240</height>
+    <height>263</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -17,42 +17,39 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Calculator</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTextEdit" name="textEdit">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>70</height>
-      </size>
+    <widget class="QTextBrowser" name="textBrowser"/>
+   </item>
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton_AC">
+      <widget class="QPushButton" name="pushButton_ac">
        <property name="text">
         <string>AC</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_18">
+      <widget class="QPushButton" name="pushButton_del">
        <property name="text">
-        <string>±</string>
+        <string>Del</string>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton_17">
+      <widget class="QPushButton" name="pushButton_pow">
        <property name="text">
-        <string>%</string>
+        <string>^</string>
        </property>
       </widget>
      </item>
@@ -162,7 +159,7 @@
       </widget>
      </item>
      <item row="4" column="3">
-      <widget class="QPushButton" name="pushButton_10">
+      <widget class="QPushButton" name="pushButton_equal">
        <property name="text">
         <string>=</string>
        </property>
@@ -175,18 +172,18 @@
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton_AC</sender>
+   <sender>pushButton_ac</sender>
    <signal>clicked()</signal>
-   <receiver>textEdit</receiver>
+   <receiver>label</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>57</x>
-     <y>110</y>
+     <x>34</x>
+     <y>115</y>
     </hint>
     <hint type="destinationlabel">
-     <x>52</x>
-     <y>79</y>
+     <x>40</x>
+     <y>95</y>
     </hint>
    </hints>
   </connection>
