--- a/ui/ui_calculator.ui
+++ b/ui/ui_calculator.ui
@@ -111,6 +111,9 @@ QPushButton {
 	setAlignment:AlignRight;
 }</string>
         </property>
+        <property name="text">
+         <string>0</string>
+        </property>
        </widget>
       </item>
      </layout>
