--- a/ui/ui_warn.ui
+++ b/ui/ui_warn.ui
@@ -6,14 +6,38 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>225</width>
-    <height>92</height>
+    <width>250</width>
+    <height>130</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>250</width>
+    <height>130</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>250</width>
+    <height>130</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>警告</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/img/warn.png</normaloff>:/img/warn.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	font:15pt;
+	font-family:&quot;PingFang SC&quot;;
+	font-weight:bold;
+}
+</string>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label">
@@ -33,13 +57,15 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>225</width>
+     <width>250</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
